// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatDisplay - web_search tool call snapshot (running → done) > snapshot: done state (result appended) 1`] = `
"❯ [you]
  Search for React hooks best practices

⚙ Search React hooks best practices
  └─ Searched
"
`;

exports[`ChatDisplay - web_search tool call snapshot (running → done) > snapshot: running state (no result yet) 1`] = `
"❯ [you]
  Search for React hooks best practices

⚙ Search React hooks best practices
  └─ Running ...
"
`;
